--- a/css/header.css
+++ b/css/header.css
@@ -3,35 +3,39 @@
     margin: 0;
     padding: 0;
 
+
 }
 
 body{
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
-    background-color: bisque;
+    background: linear-gradient(to right, rgb(57, 140, 234), rgb(193, 221, 242)  , rgb(171, 202, 238));
+
+    width: 100vw;
+
 
 }
-
 header {
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-    width: 100vw;
 
     position: sticky;
-    top: -80px;
+    top: -95px;
     z-index: 2;
+
 
 }
 
 .header__h1{
     font-size: 2rem;
-    height: 80px;
-    padding-top: 20px;
+    height: 90px;
+    padding-top: 30px;
 
 
     margin-left: 25px;
 }
+
 /* h1 <a> tag */
 .header__link {
     text-decoration: none;
@@ -41,7 +45,7 @@ header {
 /*Flex container*/
 .header__nav-bar {
     background-color: rgba(40, 37, 37, 0.423);
-    height: 45px;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -56,6 +60,9 @@ header {
 /*Flex items*/
 .header__nav-bar-ul{   
     display: flex;
+    overflow:hidden;
+    
+
 }
 
 
@@ -65,6 +72,8 @@ header {
     margin-left: 20px;
 }
 
+
+
 #header__right-nav-bar-ul{
     display: flex;
     gap: 1rem;
@@ -72,10 +81,14 @@ header {
     margin-right: 20px;
 }
 
-
+I {
+    cursor: pointer;
+}
 
 /*nav bar buttons*/
 .header__nav-bar-li {
+
+    font-size: 1.2rem;
 
     border-bottom: 5px solid transparent;
     cursor: pointer;
@@ -85,8 +98,9 @@ header {
     
     border-radius: 0.25rem;
     padding: 5px;
+
+
 }
-/* rgb(121, 174, 235); */
 
 .header__nav-bar-li:hover{
 
@@ -97,6 +111,8 @@ header {
     background: linear-gradient(to right, rgb(0, 116, 248), rgb(193, 221, 242)  , rgb(171, 202, 238));
     -webkit-background-clip: text;
     -webkit-text-fill-color:transparent;
+
+
 }
 
 
