--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,11 @@
 *{
     box-sizing: border-box;
+    
+    --background-color: rgb(17, 16, 16);
+
+    
     margin: 0;
     padding: 0;
-
 
 }
 
@@ -10,8 +13,10 @@ body{
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(to right, rgb(57, 140, 234), rgb(193, 221, 242)  , rgb(171, 202, 238));
-
+    
     width: 100vw;
+    overflow-x:hidden;
+    
 
 
 }
@@ -42,47 +47,33 @@ header {
     color: white;
 }
 
-/*Flex container*/
-.header__nav-bar {
-    background-color: rgba(40, 37, 37, 0.423);
+/*Nav bar Flex container contains 3 Flex items: ul-left, ul-right and hamburguer button*/
+.header__nav-bar{
+    background-color: var(--background-color);
     height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     position: sticky;
-    z-index: 0;
+    z-index: 1;
     top: 0;
 
 
 }
 
-/*Flex items*/
-.header__nav-bar-ul{   
-    display: flex;
-    overflow:hidden;
-    
-
-}
-
-
-#header__left-nav-bar-ul {
+.header__nav-bar-ul-left {
     display: flex;
     gap: 3.5rem;
     margin-left: 20px;
+
 }
 
 
-
-#header__right-nav-bar-ul{
+.header__nav-bar-ul-right{
     display: flex;
     gap: 1rem;
-
     margin-right: 20px;
-}
-
-I {
-    cursor: pointer;
 }
 
 /*nav bar buttons*/
@@ -102,9 +93,9 @@ I {
 
 }
 
-.header__nav-bar-li:hover{
+.header__nav-bar-li:hover, .header__hamburguer-button:hover{
 
-    border-bottom: 4px solid rgb(121, 174, 235);
+    border-bottom: 3px solid rgb(121, 174, 235);
 
     transform: scale(1.05);
     /* gradient for the text */
@@ -115,21 +106,103 @@ I {
 
 }
 
+/* Styles for the hamburguer button on mobile menu */
+
+.header__hamburguer-button{
+        color: white;
+        position: absolute;
+        left: 25px;
+        top: 12px;
 
 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
 
-@media (max-width: 750px){
-    #header__left-nav-bar-ul {
-        gap: 0rem;
-        margin-left: 0px;
+        
+        gap: 0.2rem;
+
+        height: 2rem;
+        width: 2.3rem;
+
+        
     }
+    
+    .header__hamburguer-bar{
+    display: none;
 
-    #header__right-nav-bar-ul{
-        gap: 0rem;
-        margin-right: 0px;
-    }
+    background-color: white;
+    height: 0.2rem;
+    width: 100%;
+    border-radius: 0.5rem;
+}
+
+
+
+
+@media (max-width: 900px){
 
     .header__h1{
-        margin-left: 5px;
+        margin-left: 1rem;
     }
+
+   .header__nav-bar{
+    flex-direction: column;
+    padding: 1rem 0rem 0rem 0rem;
+
+   }
+
+    .header__nav-bar-ul-right{
+        gap: 0.5rem;
+        margin-left: 2.5rem;
+
+    }
+    
+    /* .header__nav-bar-ul-left{
+        display: none;
+    } */   
+    
+    /* Creating the nav bar and moving it away until hamburguer button is press */
+    .header__nav-bar-ul-left{
+
+        display: flex;
+        flex-direction: column;
+        border-radius: 0rem 0rem 1rem 1rem;
+        order: 1; /*So that it shows up after the right nav bar (icons) */
+
+        transform: translateX(-100rem);
+        transition: 0.6s ease-out ;
+        
+
+
+        padding: 1rem 1rem 1rem 2.3rem;
+        width: 100%;
+        gap: 1.5rem;
+        margin: 0rem ;
+
+        background-color: var(--background-color) ;
+        
+    }
+
+    .header__nav-bar-ul-left.active{
+
+        /* display: flex; */
+        transform: translateX(0rem);
+        transition: 0.4 ease-in ;
+
+
+
+    }
+
+     /* .header__nav-bar-li{
+
+        
+    }
+  */
+
+    .header__hamburguer-bar{
+        
+        display: block;
+    
+}
 }
