--- a/css/product-gallery.css
+++ b/css/product-gallery.css
@@ -1,6 +1,6 @@
 main {
     padding: 2rem 1rem;
-    
+
 
 }
 
@@ -53,6 +53,7 @@ main {
 
     background-size: 100% 25rem;
     background-repeat: repeat;
+    
 
 
 
@@ -77,7 +78,7 @@ main {
 }
 
 /* Flexbox */
-/* Product item details positioning */
+/* Product item layout positioning */
 .main__product-item-grid {
     /* This is also a flex container for the details of the product */
     position: relative;
@@ -85,7 +86,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    transition: all 0.3S;
 
     box-shadow: 0.0rem 0.1rem 0.2rem black;
 }
@@ -136,7 +137,6 @@ bottom: 1rem;
     gap: 0.5rem;
 
     transform: translateY(-400rem);
-    transition: all 0.1s;
 
 }
 
@@ -149,7 +149,7 @@ bottom: 1rem;
     font-size: 1.5rem;
     transform: translateY(-400rem);
 
-    transition: all 0.1s;
+    transition: all 0.2s;
 
     border-radius: 10%;
 }
@@ -186,12 +186,12 @@ bottom: 1rem;
 
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1040px) {
     .main__aside-vertical-ad {
         grid-row: 1/7;
     }
     
-    @media (max-width: 730px) {
+    @media (max-width: 765px) {
         .main__aside-horizontal-ad {
                 background-size: 100%;
                 
