--- a/css/header.css
+++ b/css/header.css
@@ -1,38 +1,13 @@
-*{
-    box-sizing: border-box;
-    
-    --background-color: rgb(26, 24, 24);
-  
-    
-    margin: 0;
-    padding: 0;
 
-
-}
-
-body{
-    /* background: linear-gradient(to right, rgb(57, 140, 234), rgb(193, 221, 242)  , rgb(171, 202, 238)); */
-    background: linear-gradient(to right, rgb(57, 140, 234), rgb(141, 190, 230)  , rgb(190, 208, 227));
-    font-size: 1rem;
-    width: 100vw;
-    overflow-x:hidden;
-
-    font-family: Arial, Helvetica, sans-serif;
-    font-stretch: wider;
-
-    
-
-
-}
 header {
+
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     position: sticky;
     top: -90px;
     z-index: 2;
-
-
+    
 }
 
 .header__h1{
@@ -40,6 +15,8 @@ header {
     height: 90px;
     padding-top: 30px;
 
+    font-stretch: ultra-expanded;
+    font-family: var(--font-gothic);
 
     margin-left: 25px;
 }
@@ -76,7 +53,7 @@ header {
 .header__nav-bar-ul-right{
     display: flex;
     gap: 1rem;
-    margin-right: 20px;
+    margin-right: 2rem;
 
     position: relative; /*Relative for search-bar-active*/
 
