--- a/css/store-info.css
+++ b/css/store-info.css
@@ -1,15 +1,7 @@
-*{
-    --grey-background: rgb(82, 80, 80);
-    --white-color: rgb(255, 255, 255);
-    --lightgrey-color-text: rgb(235, 229, 229);
-    --grey-text: rgb(237, 223, 223);
-    --lightgrey-bg: rgba(128, 128, 128, 0.251);
-    --lightgrey-bg-darker: rgba(128, 128, 128, 0.211);
-}
 
 main {
 
-    padding: 2rem 0rem !important;
+    padding: 2rem 0rem 0rem 0rem!important;
     width: 100vw;
     
 }
@@ -19,9 +11,7 @@ main {
 
 } */
 
-section {
-    margin: 0.3rem 0.3rem;
-}
+
 
 input, textarea{
     font-size: 1rem;
@@ -138,61 +128,6 @@ input, textarea{
 
 }
 
-.main__section-newsletter-grid-item{
-    grid-row: 10/15;
-    grid-column: 1/3;
-
-    align-items: center;
-    justify-content: center;
-
-    display: flex;
-    gap: 4rem;
-    font-size: larger;
-
-    background-color: var(--lightgrey-bg);
-    border-radius: 1rem;
-    padding: 3rem 1rem;
-    width: 100%;
-
-    z-index: 0;
-
-}
-
-
-.main__div-newsletter-flex-col{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.main__section-h2{
-    align-self: center;
-}
-
-.main__form-flex-col{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.form__input-big{
-    height: 3rem;
-    width: 90%;
-    padding-left: 0.5rem;
-    font-size: large;
-}
-
-
-.form__input-container-flex-row{
-        display: flex;
-        gap: 2rem;
-}
-
-.form__label-input-flex-col{
-        display: flex;
-        flex-direction: column;
-}
-
 
 .main__aside-vertical-ad{
     /* display: grid;
@@ -214,7 +149,7 @@ input, textarea{
     
     .main__grid-container{
         
-        grid-template-rows: repeat(13, 10rem) ;
+        grid-template-rows: repeat(11, 10rem) ;
         grid-template-columns: 3fr 3fr ; 
 
     }
@@ -243,27 +178,13 @@ input, textarea{
     }
 
     .main__section-newsletter-grid-item{
-        grid-row:  8/11;
+        grid-row:  8/12 !important; 
 
     }
 
     .main__aside-vertical-ad{
-        grid-column: 1/3 !important;
-
-        grid-row: 11/14 !important;
-
-        margin-top: 2rem;
-
-        justify-self: center;
-        background: url('/images/ads/vertical-ad.jpg ') ;
-
-
-
-        background-repeat: repeat-x;
-        
-    
-        height: 25rem;
-        width: 20rem;
+            
+        display: none;
 
 
 
@@ -310,10 +231,7 @@ input, textarea{
 
     }
 
-    .main__section-newsletter-grid-item{
-        flex-direction: column;
-        gap: 1rem;
-    }
+ 
 
     .main__div-inputs-flex-row{
         flex-direction: column;
