eliminated ad on store-info page

--- a/css/store-info.css
+++ b/css/store-info.css
@@ -182,7 +182,7 @@ input, textarea{
 
     }
 
-    .main__aside-vertical-ad{
+    .main__aside-vertical-ad.active{
             
         display: none;
 
