--- a/css/store-info.css
+++ b/css/store-info.css
@@ -47,6 +47,8 @@ input, textarea{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+
     
     font-size: larger;
     background-color: var(--lightgrey-bg-darker);
@@ -112,6 +114,69 @@ input, textarea{
     height: 20rem;
    
 }
+
+.main__div-carousel {
+
+
+	position: relative;
+	grid-row: 3/5;
+	width: 50rem;
+	height: 25rem;
+	grid-column: 2/3;
+	padding: 2rem 2rem 2rem 1rem;
+}
+
+	.main__li-carousel-slide {
+		position: absolute;
+	    inset: 0;
+	    opacity: 0;
+	}
+	.main__li-carousel-slide	img {
+		width: 100%;
+		height: 20rem;
+		margin-top: 2rem ;
+	}
+
+	.main__button-carousel{
+		position: absolute;
+		z-index: 1;
+		top: 11.5rem;
+
+        
+	    transform:scale(1.3);
+		padding:0.2rem 0.2rem 0rem 0.2rem;
+
+		border-radius: 0.2rem;
+		border: none;
+
+		opacity: 0.75;
+		color: rgb(26, 24, 24);
+
+		cursor: pointer;
+
+	}
+
+    .main__button-carousel:hover{
+
+        color: black;
+        opacity: 1;
+    
+
+    }
+	
+	.main__button-carousel.prev{
+		left: 0.5rem;
+	}
+
+	.main__button-carousel.next{
+		right: 0.5rem;
+	}
+
+
+.main__li-carousel-slide.active{
+	opacity: 1;
+}
+
 
 
 
@@ -182,7 +247,7 @@ input, textarea{
 
     }
 
-    .main__aside-vertical-ad.active{
+    .main__aside-vertical-ad.display{
             
         display: none;
 
