--- a/css/header.css
+++ b/css/header.css
@@ -12,11 +12,10 @@ header {
 
 .header__h1{
     font-size: 2rem;
+    font-family: var(--font-gothic);
+
     height: 90px;
     padding-top: 30px;
-
-    font-stretch: ultra-expanded;
-    font-family: var(--font-gothic);
 
     margin-left: 25px;
 }
@@ -29,7 +28,7 @@ header {
 
 /*Nav bar Flex container contains 3 Flex items: ul-left, ul-right and hamburguer button*/
 .header__nav-bar{
-    background-color: var(--background-color);
+    background-color: var(--almost-black-bg);
     height: 60px;
     display: flex;
     justify-content: space-between;
@@ -73,7 +72,6 @@ header {
     border-radius: 0.25rem;
     padding: 5px;
 
-    transition: all 0.3s;
 
 
 }
@@ -190,7 +188,7 @@ header {
         gap: 1.5rem;
         margin: 0rem ;
 
-        background-color: var(--background-color) ;
+        background-color: var(--almost-black-bg) ;
         
     }
 
