--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,21 @@
 * {
     box-sizing: border-box;
 
-    --background-color: rgb(26, 24, 24);
-
-
+    
+    
     margin: 0;
     padding: 0;
-
+    
+    --almost-black-bg: rgb(26, 24, 24);
     --grey-background: rgb(82, 80, 80);
-    --white-color: rgb(255, 255, 255);
-    --lightgrey-color-text: rgb(235, 229, 229);
-    --grey-text: rgb(237, 223, 223);
     --lightgrey-bg: rgba(128, 128, 128, 0.251);
     --lightgrey-bg-lighter: rgba(128, 128, 128, 0.151)
     --lightgrey-bg-darker: rgba(128, 128, 128, 0.211);
+    
+    --white-color: rgb(255, 255, 255);
+    --lightgrey-color-text: rgb(235, 229, 229);
+    --grey-text: rgb(237, 223, 223);
+    --grey-almost-black: rgb(41, 36, 36);
 
     --font-gothic: Aclonica , sans-serif;
 
@@ -22,6 +24,8 @@
 }
 
 body {
+
+
     /* background: linear-gradient(to right, rgb(57, 140, 234), rgb(193, 221, 242)  , rgb(171, 202, 238)); */
     background: linear-gradient(to right, rgb(57, 140, 234), rgb(141, 190, 230), rgb(190, 208, 227));
     font-size: 1rem;
@@ -45,6 +49,14 @@ hr{
     border: none;
     margin: 0.3rem 0rem 2rem 1.5rem;
 
+}
+
+li {
+    list-style-type: none;
+}
+
+input, select, option {
+    color: black;
 }
 
 /* Style for most <h2> in the site */
@@ -80,7 +92,7 @@ hr{
     left: 0;
     width: 500%; /*So that the 5 images are next to each other, each covering 100% */
     height: 50rem;
-    animation: 20s slider infinite; /*Moves 100% (next image) the 500% figure after some seconds*/
+    animation: 20s slider infinite; /*Moves 100% (next image) after some seconds*/
 }
 
 .main__img-slide{
@@ -159,6 +171,8 @@ hr{
     margin: 0.3rem 0rem;
 
     color: rgb(195, 43, 43);
+    text-shadow: 0 0 0.15rem gold;
+
 
     font-size: 1.2rem;
     font-weight: 800;
@@ -171,7 +185,7 @@ hr{
     margin-top: 0.7rem;
 }
 
-/* Style for snowdevil section text */
+/* Style for snowdevil section about us text:*/
 
 
 .main__p-info{
@@ -186,10 +200,8 @@ hr{
 
 }
 
+
 /* Style for image gallery */
-
-/* h2 */
-
 
 .main__div-gallery{
 
@@ -219,7 +231,7 @@ hr{
 .main__img-gallery:hover{
 
     cursor: crosshair;
-    width: 30rem;
+    width: 26rem;
     filter: contrast(120%);
     opacity: 1;
 
@@ -318,10 +330,11 @@ hr{
 
 @media(max-width: 500px){
 
+
     .main__img-gallery:hover{
 
 
-        width: 25rem;
+        width: 16rem;
 
     
         
