--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -1,5 +1,5 @@
     .main__section-newsletter-grid-item{
-        grid-row: 10/15;
+        grid-row: 10/16;
         grid-column: 1/3;
     
         align-items: center;
@@ -12,6 +12,7 @@
         background-color: var(--lightgrey-bg);
         border-radius: 1rem;
         padding: 3rem 1rem;
+        margin-top: 2rem;
         width: 100%;
     
         z-index: 0;
@@ -37,7 +38,7 @@
     
     .form__input-big{
         height: 3rem;
-        width: 90%;
+        width: 100%;
         padding-left: 0.5rem;
         font-size: large;
     }
