--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,7 @@ input, select, option {
 .main__h2{
 
     margin: 0rem 2rem 0rem 1.5rem;
-    font-family: var(--font-gothic);
+    font-family: var( );
     font-weight: 400;
     font-size: 2.3rem;
 
